# drivedb

./: Cargo.toml
drivedb-bench/: Cargo.toml
src/: lib.rs  loader.rs  vendor_attribute.rs
src/ata/: misc.rs  mod.rs
src/ata/data/: health.rs  id.rs
src/ata/data/attr/: mod.rs  raw.rs
src/drivedb/: drivedb.rs
src/scsi/: mod.rs  pages.rs
src/scsi/data/: inquiry.rs  log_page.rs  mod.rs
src/scsi/data/sense/: descriptor.rs  fixed.rs  key.rs  mod.rs
src/scsi/data/vpd/: device_id.rs
