[package]
name = "drivedb"
description = "smartmontools drive database parser"
version = "0.10.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/drivedb"
license = "MPL-2.0"

[workspace]
members = ["drivedb-bench"]

[dependencies]
libc = "0.2"
nom = "^2.2"
regex = "0.2"
byteorder = "1"
quick-error = "1.2"
log = "0.4"

# feature: serializable
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }

[features]
default = []
serializable = ["serde", "serde_derive"]
