[package]
name = "drivedb"
description = "smartmontools drive database parser"
version = "0.10.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
repository = "https://github.com/vthriller/drivedb"
license = "MPL-2.0"

[workspace]
members = ["drivedb-bench"]

[dependencies]
nom = "^2.2"
regex = "0.2"
quick-error = "1.2"
